--- a/src/index.css
+++ b/src/index.css
@@ -74,3 +74,62 @@ textarea:focus, input:focus, select:focus {
 .form_login .links_login a:nth-child(2){
   margin-left: auto;
 }
+
+/* Header.css */
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 15vw;
+  background-color: #006A57;
+  height: 6vh;
+}
+
+.logo img{
+  height: 30px;
+}
+
+.user-circle {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  /* Outros estilos para o círculo do usuário */
+}
+
+/* Main css */
+.main {
+  display: flex;
+  flex-direction: column;
+  height: calc(94vh - 20px);
+  width: 70vw;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.button{
+  height: 35px;
+  width: auto;
+  min-width: 130px;
+  color: white;
+  background-color: #006A57;
+  padding-left: 1%;
+  padding-right: 1%;
+  border: none;
+  margin-left: 5px;
+  margin-right: 5px;
+  word-wrap: none;
+  cursor: pointer;
+  font-weight: 400;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.OptionButton{
+  border: none;
+  display: flex;
+  align-items: center;
+  width: auto;
+  min-width: 130px;
+  height: 35px;
+}
