--- a/src/index.css
+++ b/src/index.css
@@ -81,7 +81,7 @@ textarea:focus, input:focus, select:focus {
   justify-content: space-between;
   align-items: center;
   padding: 10px 15vw;
-  background-color: #006A57;
+  background-color: #018069;
   height: 6vh;
 }
 
@@ -111,7 +111,7 @@ textarea:focus, input:focus, select:focus {
   width: auto;
   min-width: 130px;
   color: white;
-  background-color: #006A57;
+  background-color: #018069;
   padding-left: 1%;
   padding-right: 1%;
   border: none;
