--- a/src/index.css
+++ b/src/index.css
@@ -133,3 +133,77 @@ textarea:focus, input:focus, select:focus {
   min-width: 130px;
   height: 35px;
 }
+
+/* MODAL */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  position: relative;
+  width: 300px;
+  max-width: 100%;
+}
+
+.close-button {
+  position: absolute;
+  top: 0px;
+  right: 10px;
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+}
+
+.modal-content form{
+  margin-top: 20px;
+}
+
+.modal-content #subtitle{
+  color: #494949;
+}
+
+.modal-content input, button{
+  width: 95%;
+  height: 40px;
+  padding-left: 15px;
+  margin-top: 10px;
+  border: 1px solid rgb(0, 0, 0, 20%);
+  border-radius: 5px;
+}
+
+.modal-content form button{
+  height: 35px;
+  width: auto;
+  min-width: 300px;
+  color: white;
+  background-color: #018069;
+  border: none;
+  word-wrap: none;
+  cursor: pointer;
+  font-weight: 400;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
